# 2D-Renderer

./: .gitignore  Cargo.toml  README.md
src/: base_renderer.rs  base_shader.wgsl  circle.rs  color_shader.wgsl  entity.rs  ind_vtx_data.vtx  main.rs  test_vtx.vtx  utils.rs  vertex.rs  vertex_data.vtx
