[package]
name = "Web-GPU-rendering-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu="0.19.3"
winit="0.29.1"
env_logger="0.11.1"
pollster="0.3.0"
coarsetime="0.1.34"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = "z"
codegen-units = 1
overflow-checks = false